--- a/src/wm2000/gui/main_window.ui
+++ b/src/wm2000/gui/main_window.ui
@@ -34,8 +34,10 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>&amp;File</string>
     </property>
+    <addaction name="actionNew"/>
+    <addaction name="separator"/>
     <addaction name="actionOpen"/>
     <addaction name="actionSave_As"/>
     <addaction name="separator"/>
@@ -43,14 +45,14 @@
    </widget>
    <widget class="QMenu" name="menuExport">
     <property name="title">
-     <string>Export</string>
+     <string>E&amp;xport</string>
     </property>
     <addaction name="actionManage_export_targets"/>
     <addaction name="actionChoose"/>
    </widget>
    <widget class="QMenu" name="menuPublish">
     <property name="title">
-     <string>Publish</string>
+     <string>P&amp;ublish</string>
     </property>
     <addaction name="actionPublish_to_github_com_nhanb"/>
     <addaction name="actionPublish_to_gitlab_com_nhanb"/>
@@ -63,43 +65,66 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset theme="document-open"/>
+   </property>
    <property name="text">
-    <string>Open...</string>
+    <string>&amp;Open...</string>
    </property>
   </action>
   <action name="actionSave_As">
+   <property name="icon">
+    <iconset theme="document-save-as"/>
+   </property>
    <property name="text">
-    <string>Save As...</string>
+    <string>Save &amp;As...</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::MenuRole::TextHeuristicRole</enum>
    </property>
   </action>
   <action name="actionQuit">
+   <property name="icon">
+    <iconset theme="application-exit"/>
+   </property>
    <property name="text">
-    <string>Quit</string>
+    <string>&amp;Quit</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::MenuRole::QuitRole</enum>
    </property>
   </action>
   <action name="actionManage_export_targets">
    <property name="text">
-    <string>Export to ~/foo/bar</string>
+    <string>&amp;Export to ~/foo/bar</string>
    </property>
   </action>
   <action name="actionChoose">
    <property name="text">
-    <string>Manage...</string>
+    <string>&amp;Manage...</string>
    </property>
   </action>
   <action name="actionPublish_to_github_com_nhanb">
    <property name="text">
-    <string>Publish to github.com/nhanb</string>
+    <string>&amp;Publish to github.com/nhanb</string>
    </property>
   </action>
   <action name="actionPublish_to_gitlab_com_nhanb">
    <property name="text">
-    <string>Publish to gitlab.com/nhanb</string>
+    <string>Publish to &amp;gitlab.com/nhanb</string>
    </property>
   </action>
   <action name="actionManage">
    <property name="text">
-    <string>Manage...</string>
+    <string>&amp;Manage...</string>
+   </property>
+  </action>
+  <action name="actionNew">
+   <property name="icon">
+    <iconset theme="document-new"/>
+   </property>
+   <property name="text">
+    <string>New...</string>
    </property>
   </action>
  </widget>
